2008-06-02  Frank Ch. Eigler  <fche@elastic.org>

	PR6534
	* translate.cxx (c_unparser::emit_module_init): Use UTS_RELEASE
	instead of uts_sem/utsname() as kernel version-checking hack.

2008-06-02    <brolley@redhat.com>

	* stap-client (initialization): port is no longer hard coded.
	Initialize avahi_service_tag to _stap._tcp.
	(find_and_connect_to_server): Handle server/port returned by
	match_server.
	(match_server): Obtain server ip address and port from output
	of the -r option to avahi-browse. Echo a server/port pair.

2008-06-02  Zhaolei  <zhaolei@cn.fujitsu.com>

	* main.cxx (main): Fix the problem that kernel module compile
	failure when runtime directory is set to relative path(stap -R).

2008-05-30  Dave Brolley  <brolley@redhat.com>

	* stap-client, stap-server: New compile server and client scripts.

2008-05-30  Srinivasa DS  <srinivasa@in.ibm.com>
	PR 6562
	* tapsets.cxx, translate.cxx: modified one argument for
				dwfl_linux_kernel_report_offline().
	* testsuite/systemtap.base/debugpath.exp: Modified testsuite for new
				SYSTEMTAP_DEBUGINFO_PATH behaviour.
	* stap.1.in: Modified manpage for new SYSTEMTAP_DEBUGINFO_PATH behaviour.

2008-05-29  Jim Keniston  <jkenisto@us.ibm.com>

	PR 6582
	* tapset/context.stp: Added registers_valid().
	* stapfuncs.5.in: Ditto.
	* tapset/x86_64/registers.stp: Added registers_valid() check.
	* tapset/ppc64/registers.stp: Ditto.
	* tapset/i686/registers.stp: Ditto.  Also fixed warnings due to
	sp_offset and ss_offset not being global.

2008-05-29  Ananth N Mavinakayanahalli <ananth@in.ibm.com>

	PR 6563
	* tapset/ppc64/registers.stp: Fix powerpc dwarfless argument access

2008-05-28  Josh Stone  <joshua.i.stone@intel.com>

	PR 6529
	* translate.cxx (c_unparser::visit_return_statement): Make sure we
	notice errors from evaluating return values.

2008-05-28  David Smith  <dsmith@redhat.com>

	* tapsets.cxx (utrace_derived_probe_group::emit_module_decls):
	Removed debug print.
