@@ -23,7 +23,6 @@ enum
         STP_EXIT,
 	STP_OOB_DATA,
 	STP_SYSTEM,
-	STP_UNWIND,
 	STP_TRANSPORT,
 	STP_CONNECT,
  	STP_DISCONNECT,
@@ -44,7 +43,6 @@ static const char *_stp_command_name[] = {
 	"STP_EXIT",
 	"STP_OOB_DATA",
 	"STP_SYSTEM",
-	"STP_UNWIND",
 	"STP_TRANSPORT",
 	"STP_CONNECT",
 	"STP_DISCONNECT",
