@@ -1,3 +1,8 @@
+2008-06-03  Frank Ch. Eigler  <fche@elastic.org>
+
+	PR 6429.
+	* mainloop.c (stp_main_loop): Remove STP_UNWIND message support.
+
 2008-05-05  Martin Hunt  <hunt@redhat.com>
 
 	* mainloop.c (child_proc): Handle sig_chld
