@@ -1,3 +1,9 @@
+2008-06-03  Frank Ch. Eigler  <fche@elastic.org>
+
+	PR 6429.
+	* Makefile.am: Don't link stapio with -ldw.
+	* Makefile.in: Regenerated.
+
 2008-06-02  Frank Ch. Eigler  <fche@elastic.org>
 
 	PR6534
